# EnvX

./: .gitignore  CMakeLists.txt  pyproject.toml
envx/: __init__.py
envx/base/: env_dynamics_base.py  env_renderer_base.py
envx/cpp/: __init__.py  cpp.py  cpp_test.py
envx/cpp/farmland/: __init__.py  farmland.py
envx/cpp/farmland_v1/: __init__.py  farmland_v1.py
envx/cpp/farmland_v2/: __init__.py  farmland_v2.py
envx/cpp/lawn_mowing/: __init__.py  lawn_mowing.py  lawn_mowing_render.py
envx/cpp/pasture/: __init__.py  pasture.py
envx/cpp/pasture_toy/: __init__.py  pasture_toy.py
envx/data/farmland_v2/1/: farmland_0.npy  farmland_1.npy  farmland_10.npy  farmland_100.npy  farmland_1000.npy  farmland_1001.npy  farmland_1002.npy  farmland_1003.npy  farmland_1004.npy  farmland_1005.npy  farmland_1006.npy  farmland_1007.npy  farmland_1008.npy  farmland_1009.npy  farmland_101.npy  farmland_1010.npy  farmland_1011.npy  farmland_1012.npy  farmland_1013.npy  farmland_1014.npy  farmland_1015.npy  farmland_1016.npy  farmland_1017.npy  farmland_1018.npy  (+1624 more)
envx/dcpp/: __init__.py
envx/dcpp/lawn_mowing/: __init__.py  lawn_mowing.py
envx/farmland/: farmland_env.py
envx/farmland/core/: farmland_functional.py
envx/farmland/dynamics/: farmland_dynamics.py  farmland_env_state.py
envx/farmland/render/: Farmland_render_state.py  Farmland_renderer.py
envx/utils/: farmland_jax_env.py  farmlandv1_jax_env.py  functional_jax_env.py  total_variation.py
envx/utils/apf_jax/: __init__.py  apf_jax.py
envx/utils/pix/: augment.py  interpolation.py  jitted.py
src/: cpu_apf.cpp
tests/: discrete_actions.py  env_time_cost.py  import_env.py  position_distance.py  run_over.py  tv.py  view_obs.py  view_obs_with_render.py
tests/apf/: import_apf.py  normal_dist.py
tests/dcpp/: view_obs.py
tests/operations/: dp_seperate_area.py  jax_deque.py  jax_fori_loop.py  position_distance.py  rotation.py  tv.py
tests/pasture/: apf.py  import_env.py  maxpool.py  triangle_mask.py  view_obs.py
tests/rules/: import_env.py
(+1 files in other folders)
